--- a/com.ospinet.SplashScreen/AndroidManifest.xml
+++ b/com.ospinet.SplashScreen/AndroidManifest.xml
@@ -37,6 +37,8 @@
             <activity android:name="com.ospinet.app.Profile_Edit" android:screenOrientation="portrait" ></activity>
             <activity android:name="com.ospinet.app.File_records_list" android:screenOrientation="portrait" ></activity>
             <activity android:name="com.ospinet.app.PreMemberHome" android:screenOrientation="portrait" ></activity>
+            <activity android:name="com.ospinet.app.Share" android:screenOrientation="portrait" ></activity>
+            <activity android:name="com.ospinet.app.ContactsMainActivity" android:screenOrientation="portrait" ></activity>
             <activity android:name=".MainActivity" android:screenOrientation="portrait" ></activity>
             <activity android:name=".ShareMainActivity" android:screenOrientation="portrait" ></activity>
             <activity android:name="com.ospinet.app.login_2" android:screenOrientation="portrait" android:noHistory="true">
